css防止夜间按钮瞎眼

--- a/MkDocs/docs/resources/css/extra.css
+++ b/MkDocs/docs/resources/css/extra.css
@@ -265,3 +265,10 @@ pre {
   box-shadow: none;
   animation: fix-tabs-fade-in 1s cubic-bezier(.4, 0, .2, 1) forwards;
 }
+
+
+
+/* 防止夜间按钮瞎眼 */
+[data-md-color-scheme=slate] .md-button:hover {
+  background-color: var(--md-primary-fg-color) !important;
+}
