--- a/MkDocs/docs/resources/css/extra.css
+++ b/MkDocs/docs/resources/css/extra.css
@@ -285,7 +285,7 @@ pre {
   margin-left: 0 !important;
   overflow: hidden;
   width: 0;
-  transition: width 0.5s ease, margin 0.5s ease;
+  transition: width 0.4s cubic-bezier(.4, 0, .2, 1), margin 0.4s cubic-bezier(.4, 0, .2, 1);
 }
 
 @media screen and (min-width: 60em) {
