--- a/MkDocs/docs/resources/css/extra.css
+++ b/MkDocs/docs/resources/css/extra.css
@@ -326,3 +326,12 @@ pre {
 .repo {
   display: none;
 }
+
+/* 更多储存库信息 */
+.repo-release.not-found {
+  color: var(--md-default-fg-color);
+}
+
+.repo-date {
+  color: var(--md-default-fg-color) !important;
+}
