更新亮暗切换动画

--- a/MkDocs/docs/resources/css/extra.css
+++ b/MkDocs/docs/resources/css/extra.css
@@ -234,6 +234,11 @@ pre {
     background: none;
     box-shadow: none;
   }
+
+  .md-nav--primary .md-nav__title {
+    background: none;
+    box-shadow: none;
+  }
 }
 
 .admonition {
