--- a/MkDocs/overrides/partials/languages/zh.html
+++ b/MkDocs/overrides/partials/languages/zh.html
@@ -12,7 +12,7 @@
 "blog.draft": "草稿",
 "blog.index": "返回",
 "blog.meta": "元数据",
-"blog.references": "相关链接",
+"blog.references": "相关",
 "clipboard.copy": "复制",
 "clipboard.copied": "已复制",
 "consent.accept": "同意",
