--- a/MkDocs/overrides/partials/languages/zh.html
+++ b/MkDocs/overrides/partials/languages/zh.html
@@ -48,7 +48,7 @@
 "source": "前往仓库",
 "source.file.contributors": "贡献者",
 "source.file.date.created": "创建日期",
-"source.file.date.updated": "最后更新",
+"source.file.date.updated": "更新日期",
 "tabs": "标签",
 "toc": "目录",
 "top": "回到页面顶部"
