--- a/MkDocs/docs/resources/css/extra.css
+++ b/MkDocs/docs/resources/css/extra.css
@@ -113,30 +113,31 @@ pre {
   --md-accent-fg-color--transparent: rgba(var(--clr-fox-a400--rgb), 0.1);
   --md-typeset-a-color: var(--md-primary-fg-color--light);
 
-  /* MODIFIED _scheme.scss： adjusted saturation */
+  /* MODIFIED _scheme.scss */
+  --md-hue: 240;
   --md-sat-ratio: 5%;
   /* Default color shades */
   --md-default-fg-color: hsla(var(--md-hue), var(--md-sat-ratio), 90%, 0.82);
   --md-default-fg-color--light: hsla(var(--md-hue), var(--md-sat-ratio), 90%, 0.56);
   --md-default-fg-color--lighter: hsla(var(--md-hue), var(--md-sat-ratio), 90%, 0.32);
   --md-default-fg-color--lightest: hsla(var(--md-hue), var(--md-sat-ratio), 90%, 0.12);
-  --md-default-bg-color: hsla(var(--md-hue), var(--md-sat-ratio), 14%, 1);
-  --md-default-bg-color--light: hsla(var(--md-hue), var(--md-sat-ratio), 14%, 0.54);
-  --md-default-bg-color--lighter: hsla(var(--md-hue), var(--md-sat-ratio), 14%, 0.26);
-  --md-default-bg-color--lightest: hsla(var(--md-hue), var(--md-sat-ratio), 14%, 0.07);
+  --md-default-bg-color: hsla(var(--md-hue), var(--md-sat-ratio), 7%, 1);
+  --md-default-bg-color--light: hsla(var(--md-hue), var(--md-sat-ratio), 7%, 0.54);
+  --md-default-bg-color--lighter: hsla(var(--md-hue), var(--md-sat-ratio), 7%, 0.26);
+  --md-default-bg-color--lightest: hsla(var(--md-hue), var(--md-sat-ratio), 7%, 0.07);
   /* Code color shades */
   --md-code-fg-color: hsla(var(--md-hue), var(--md-sat-ratio), 86%, 0.82);
-  --md-code-bg-color: hsla(var(--md-hue), var(--md-sat-ratio), 18%, 1);
+  --md-code-bg-color: hsla(var(--md-hue), var(--md-sat-ratio), 9%, 1);
   /* Typeset `kbd` color shades */
   --md-typeset-kbd-color: hsla(var(--md-hue), var(--md-sat-ratio), 90%, 0.12);
   --md-typeset-kbd-accent-color: hsla(var(--md-hue), var(--md-sat-ratio), 90%, 0.2);
-  --md-typeset-kbd-border-color: hsla(var(--md-hue), var(--md-sat-ratio), 14%, 1);
+  --md-typeset-kbd-border-color: hsla(var(--md-hue), var(--md-sat-ratio), 7%, 1);
   /* Typeset `table` color shades */
   --md-typeset-table-color: hsla(var(--md-hue), var(--md-sat-ratio), 95%, 0.12);
   --md-typeset-table-color--light: hsla(var(--md-hue), var(--md-sat-ratio), 95%, 0.035);
   /* Footer color shades */
-  --md-footer-bg-color: hsla(var(--md-hue), var(--md-sat-ratio), 10%, 0.87);
-  --md-footer-bg-color--dark: hsla(var(--md-hue), var(--md-sat-ratio), 8%, 1);
+  --md-footer-bg-color: hsla(var(--md-hue), var(--md-sat-ratio), 5%, 0.87);
+  --md-footer-bg-color--dark: hsla(var(--md-hue), var(--md-sat-ratio), 4%, 1);
 }
 
 
@@ -186,8 +187,8 @@ pre {
 
   .md-tabs {
     color: var(--header-color);
-    background-color: unset;
-    backdrop-filter: blur(20px);
+    background-color: var(--md-default-bg-color--lighter);
+    backdrop-filter: blur(8px);
     border-bottom: 1px solid var(--header-border-color) !important;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -245,6 +246,10 @@ pre {
   .md-nav--secondary .md-nav__title {
     background: none;
     box-shadow: none;
+  }
+
+  [data-md-color-scheme=slate] .md-search__form {
+    background-color: #ffffff0a;
   }
 }
 
