优化移动端侧栏标题区颜色

--- a/MkDocs/docs/resources/css/extra.css
+++ b/MkDocs/docs/resources/css/extra.css
@@ -246,7 +246,7 @@ pre {
     border-radius: 10px;
   }
 
-  .md-nav__title[for=__drawer] {
+  .md-nav--primary .md-nav__title {
     background-color: unset !important;
   }
 
