--- a/MkDocs/docs/resources/css/extra.css
+++ b/MkDocs/docs/resources/css/extra.css
@@ -247,6 +247,8 @@ pre {
   }
 
   .md-sidebar {
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
     background-color: unset !important;
   }
 
