--- a/MkDocs/docs/resources/css/extra.css
+++ b/MkDocs/docs/resources/css/extra.css
@@ -437,9 +437,11 @@ body {
 
 
 /* 修复博客目录字体不一致 */
-.md-nav__link .md-ellipsis .md-typeset {
-  font-weight: 700;
-  font-size: .7rem;
+@media screen and (min-width: 76.25em) {
+  .md-nav__link .md-ellipsis .md-typeset {
+    font-weight: 700;
+    font-size: .7rem;
+  }
 }
 
 
