--- a/MkDocs/docs/resources/css/extra.css
+++ b/MkDocs/docs/resources/css/extra.css
@@ -220,6 +220,7 @@ pre {
     /* border-bottom: 1px solid var(--header-border-color) !important; */
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    border-bottom: none !important;
   }
 }
 
