--- a/MkDocs/overrides/partials/comments.html
+++ b/MkDocs/overrides/partials/comments.html
@@ -1,76 +1,55 @@
 <!-- Comment system -->
 {% if page.meta.comments %}
 <h2 id="__comments">{{ lang.t("meta.comments") }}</h2>
-<!-- Insert generated snippet here -->
-<script
-  src="https://giscus.app/client.js"
-  data-repo="zetaloop/loop.comments"
-  data-repo-id="R_kgDOLrMUIA"
-  data-category="Announcements"
-  data-category-id="DIC_kwDOLrMUIM4CeiL9"
-  data-mapping="pathname"
-  data-strict="0"
-  data-reactions-enabled="1"
-  data-emit-metadata="0"
-  data-input-position="top"
-  data-theme="preferred_color_scheme"
-  data-lang="zh-CN"
-  crossorigin="anonymous"
-  async
-></script>
-<!-- Synchronize Giscus theme with palette -->
+<div id="giscus-container"></div>
 <script>
-  var giscus = document.querySelector("script[src*=giscus]");
+  function loadGiscus(theme) {
+    $giscus = $("#giscus-container");
+    height = $giscus.height();
+    $("#giscus-container").html("");
+    $giscus.css("min-height", height);
 
-  // Set palette on initial load
-  var palette = __md_get("__palette");
-  if (palette && typeof palette.color === "object") {
-    var theme = palette.color.scheme === "slate" ? "transparent_dark" : "light";
+    var giscusScript = document.createElement("script");
+    giscusScript.src = "https://giscus.app/client.js";
+    giscusScript.setAttribute("data-repo", "zetaloop/loop.comments");
+    giscusScript.setAttribute("data-repo-id", "R_kgDOLrMUIA");
+    giscusScript.setAttribute("data-category", "Announcements");
+    giscusScript.setAttribute("data-category-id", "DIC_kwDOLrMUIM4CeiL9");
+    giscusScript.setAttribute("data-mapping", "pathname");
+    giscusScript.setAttribute("data-strict", "0");
+    giscusScript.setAttribute("data-reactions-enabled", "1");
+    giscusScript.setAttribute("data-emit-metadata", "0");
+    giscusScript.setAttribute("data-input-position", "top");
+    giscusScript.setAttribute("data-theme", theme);
+    giscusScript.setAttribute("data-lang", "zh-CN");
+    giscusScript.crossOrigin = "anonymous";
+    giscusScript.async = true;
 
-    // Instruct Giscus to set theme
-    giscus.setAttribute("data-theme", theme);
-
-    // Save last theme
-    var lastTheme = theme;
+    document.getElementById("giscus-container").appendChild(giscusScript);
   }
 
-  // Register event handlers after documented loaded
-  document.addEventListener("DOMContentLoaded", function () {
+  var lastTheme;
+  $(window).on("load", function () {
+    var palette = __md_get("__palette");
+    var initialTheme =
+      palette && palette.color.scheme === "slate"
+        ? "transparent_dark"
+        : "light";
+    lastTheme = initialTheme;
+    loadGiscus(initialTheme);
+
     var ref = document.querySelector("[data-md-component=palette]");
     ref.addEventListener("change", function () {
       var palette = __md_get("__palette");
-      if (palette && typeof palette.color === "object") {
-        var theme =
-          palette.color.scheme === "slate" ? "transparent_dark" : "light";
-
-        // Instruct Giscus to change theme
-        var frame = document.querySelector(".giscus-frame");
-        if (lastTheme !== theme) {
-          lastTheme = theme;
-
-          frame.style.opacity = 0;
-          frame.contentWindow.postMessage(
-            { giscus: { setConfig: { theme } } },
-            "https://giscus.app"
-          );
-
-          // Remove Giscus title
-          frame.removeAttribute("title");
-
-          // Show when frame is loaded
-          setTimeout(function () {
-            frame.style.opacity = 0;
-          }, 500);
-          setTimeout(function () {
-            frame.style.opacity = 1;
-          }, 1000);
-        }
+      var newTheme =
+        palette && palette.color.scheme === "slate"
+          ? "transparent_dark"
+          : "light";
+      if (lastTheme !== newTheme) {
+        lastTheme = newTheme;
+        loadGiscus(newTheme);
       }
     });
-
-    // Remove Giscus title
-    var frame = document.querySelector(".giscus-frame");
-    frame.removeAttribute("title");
   });
 </script>
 {% endif %}
