外置脚本延迟加载Giscus

--- a/MkDocs/overrides/partials/comments.html
+++ b/MkDocs/overrides/partials/comments.html
@@ -1,62 +1,5 @@
 <!-- Comment system -->
 {% if page.meta.comments %}
 <h2 id="__comments">{{ lang.t("meta.comments") }}</h2>
-<div id="giscus-container"></div>
-<script>
-  function loadGiscus(theme) {
-    $giscus = $("#giscus-container");
-    height = $giscus.height();
-    $("#giscus-container").html("");
-    $giscus.css("min-height", height);
-
-    var giscusScript = document.createElement("script");
-    giscusScript.src = "https://giscus.app/client.js";
-    giscusScript.setAttribute("data-repo", "zetaloop/loop.comments");
-    giscusScript.setAttribute("data-repo-id", "R_kgDOLrMUIA");
-    giscusScript.setAttribute("data-category", "Announcements");
-    giscusScript.setAttribute("data-category-id", "DIC_kwDOLrMUIM4CeiL9");
-    giscusScript.setAttribute("data-mapping", "pathname");
-    giscusScript.setAttribute("data-strict", "0");
-    giscusScript.setAttribute("data-reactions-enabled", "1");
-    giscusScript.setAttribute("data-emit-metadata", "0");
-    giscusScript.setAttribute("data-input-position", "top");
-    giscusScript.setAttribute("data-theme", theme);
-    giscusScript.setAttribute("data-lang", "zh-CN");
-    giscusScript.crossOrigin = "anonymous";
-    giscusScript.async = true;
-
-    document.getElementById("giscus-container").appendChild(giscusScript);
-  }
-
-  var lastTheme;
-  $(window).on("load", function () {
-    document$.subscribe(function () {
-      var palette = __md_get("__palette");
-      var initialTheme =
-        palette && palette.color.scheme === "slate"
-          ? "transparent_dark"
-          : "light";
-      lastTheme = initialTheme;
-      loadGiscus(initialTheme);
-
-      if (window.__md_giscus_event_listener) {
-        // prevent multiple event listeners
-        return;
-      }
-      var ref = document.querySelector("[data-md-component=palette]");
-      ref.addEventListener("change", function () {
-        var palette = __md_get("__palette");
-        var newTheme =
-          palette && palette.color.scheme === "slate"
-            ? "transparent_dark"
-            : "light";
-        if (lastTheme !== newTheme) {
-          lastTheme = newTheme;
-          loadGiscus(newTheme);
-        }
-      });
-      window.__md_giscus_event_listener = true;
-    });
-  });
-</script>
+<div id="giscus-container" style="min-height: 300px"></div>
 {% endif %}
