在文章里对齐代码

--- a/MkDocs/docs/resources/css/extra.css
+++ b/MkDocs/docs/resources/css/extra.css
@@ -570,3 +570,10 @@ div.mermaid {
 .md-post--excerpt hr {
   display: none;
 }
+
+
+
+/* 对齐<code>，默认对齐基线会偏下 */
+.md-typeset code {
+  vertical-align: text-top;
+}
